src/app/App.css
/* ... */
.login-btn a {
  background-color: #13121e;
  padding: 10px;
  padding-left: 56px;
  padding-right: 56px;
  border-radius: 45px;
  cursor: pointer;
  color: white !important;
  user-select: none;
  transition: transform 0.3s ease;
  font-family: "montserrat", sans-serif;
  font-weight: 600;
}

.login-btn:active {
  transform: translate(-50%, -50%) scale(0.9);
}
.close-btn {
  cursor: pointer;
}
.modal-heading {
  font-family: "Rotunda", sans-serif;
  font-weight: 800;
  color: white;
  font-size: 25px;
}
.character {
  background-color: #1c1d1c;
  min-width: 270px;
  width: 270px;
  height: 360px;
  border-radius: 20px;
  display: flex;
  flex-direction: row;
  position: relative;
  transition: 0.3s all;
  cursor: pointer;
  filter: drop-shadow(11px 7px 1px rgba(24, 24, 24, 0.5));
}
.left-section {
  width: 80%;
  position: relative;
  z-index: 3;
}
.right-section {
  width: 20%;
  background-color: #1d1d1d;
  height: 100%;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
}
.character-name-background {
  background-color: lawngreen;
  width: 100%;
  height: 60%;
  position: absolute;
  top: 0%;
  left: 50%;
  transform: translate(-50%, 0%);
  z-index: -1;
  border-top-left-radius: 20px;
  overflow: hidden;

  user-select: none;
  pointer-events: none;
  position: relative;
  filter: brightness(1.4);
}
.character-name-background::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0%;
  left: -40%;
  /* transform: translate(-50%, -50%); */
  transform: rotate(180deg);
  border-top-left-radius: 20px;
  overflow: hidden;
  background-image: url("/dissolve.svg");
  background-size: cover;
  background-position: end;
  background-repeat: no-repeat;
  user-select: none;
  pointer-events: none;
  opacity: 0.2;
}
.character-name-background::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 130%;
  height: 100%;
  background-image: url("/download.png");
  background-size: cover;
  background-position: right top;
  background-repeat: no-repeat;
  opacity: 0.3; /* Adjust this value to change the opacity */
  filter: brightness(0.6);
}
.character-background-name {
  font-family: "Rotunda", sans-serif;
  font-weight: 900;
  font-style: italic;
  font-size: 85px;
  color: rgba(28, 28, 28, 0.353);
  line-height: 95px;
  transform: translateX(-15px) rotate(-180deg);
  writing-mode: vertical-rl;
  text-wrap: nowrap;
}
.character-image img {
  filter: drop-shadow(6px 2px 1px rgba(34, 34, 34, 0.5));
  width: 100%;
  height: 100%;
  object-fit: contain;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  position: absolute;
  top: 0;
  right: -5px;
  transition: 0.3s all;
}
.character-info {
  width: 100%;
  height: 40%;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  padding: 0 10px;
  color: white;
  z-index: 30;
  position: relative;
  background: linear-gradient(to top, #1d1d1d, rgba(0, 0, 0, 0.456));
  border-bottom-left-radius: 20px;
}
.character-tagline {
  font-family: "De";
  letter-spacing: -2.3px;
  font-weight: normal;
  font-size: 12px;
  transition: 0.3s all;
  filter: contrast(1.6);
}
.border{
  position: absolute;
  top: 3px;
  left: -2px;
  width: 110%;
}
.shadow{
  position: absolute;
  top: 0;
  left: -6px;
  width: 130%;
  opacity: 0.4;
}
.character-name {
  font-family: "Bebas", sans-serif;
  font-weight: 900;
  font-size: 50px;
  color: white;
  margin-top: 0px;
  line-height: 40px;
  width: 100%;
  text-align: left;
  padding-block: 5px;
  border-bottom: 1px solid white;
  transition: 0.3s all;
}
.character-pick-btn {
  width: 100%;
  text-align: center;
  font-family: "Quantum";
  font-size: 40px;
  transition: 0.3s all;
  background: linear-gradient(to right, #ffffff00, #ffffff00);
}
.character:hover .character-pick-btn {
  background: linear-gradient(to right, var(--var-left), var(--var-right), var(--var-left));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  background-size: 200% 100%;
  animation: Gradient 1s linear infinite;
}

@keyframes Gradient {
  0% {
    background-position: 200% 0;
  }
  100% {
    background-position: 0 0;
  }
}
.right-section {
  display: flex;
  z-index: 1000;
}
.tarps {
  width: 80%;
  height: 97%;
  background-color: transparent;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: auto;
  margin-right: auto;
  clip-path: polygon(0 0, 0% 0, 100% 15%, 100% 100%, 0 100%);
  border-radius: 5px;
  border-top-left-radius: 13px;
  position: relative;
  overflow: hidden;
}
.subtracts {
  position: absolute;
  top: 38%;
  right: 0px;
  width: 30px;
  height: 15px;
  background-color: #1d1d1d;
  transform: skew(0deg, 44deg);
}
.translated {
  transform: skew(0deg, 44deg) translateY(80px);
}
.hundo {
  font-family: "Bebas", sans-serif;
  background-color: #1d1d1d;
  position: absolute;
  bottom: 10px;
  color: red;
  font-weight: 900;
  font-size: 40px;
  line-height: 28px;
  writing-mode: vertical-lr;
  left: 50%;
  transform: translateX(-50%);
}
#char-img-id-0 {
  width: 240px;
  transform: translate(30px, -10px) !important;
}
.character:hover #char-img-id-0 {
  transform: translate(-5px, -5px) scale(1.2) !important;
  transition: 0.3s all;
}
.character:hover .character-image img {
  transform: scale(1.1) translate(-15px, -20px);
  transition: 0.3s all;
}
.character:hover .character-tagline {
  transform: translateX(-30px);
  transition: 0.3s all;
}
.character:hover .character-name {
  transform: translateX(-30px);
  transition: 0.3s all;
}
.character:hover {
  transform: translateY(-7px) scale(1.1);
}
.modall-body {
  max-width: 1200px;
  width: 100%;
}
.character-container {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: start;
  width: 100%;
  gap: 145px;
  overflow-x: auto;
  overflow-y: hidden;
  padding: 50px;
  padding-top: 70px;
  padding-bottom: 0px;
}
/* ... */

